WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63544
Web Inspector: tab crash after deleting trailing quote when editing attribute
https://bugs.webkit.org/show_bug.cgi?id=63544
Summary
Web Inspector: tab crash after deleting trailing quote when editing attribute
Evan Martin
Reported
2011-06-28 10:34:30 PDT
Right-click a dom node that has some attribute. Double-click on the attribute in the inspector. Delete the trailing " mark from the attribute value. Press enter. Boom. Google Chrome 14.0.803.0 (Official Build 90483) dev OS Linux WebKit 535.1 (trunk@89703)
Attachments
Patch
(5.39 KB, patch)
2011-06-29 05:10 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
Patch
(5.35 KB, patch)
2011-06-29 06:43 PDT
,
Pavel Feldman
yurys
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2011-06-29 05:10:09 PDT
Created
attachment 99074
[details]
Patch
Yury Semikhatsky
Comment 2
2011-06-29 06:40:09 PDT
Comment on
attachment 99074
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=99074&action=review
> LayoutTests/inspector/elements/set-attribute.html:112 > + InspectorTest.runAfterPendingDispatches(callback);
Please pass callback as setAttribute third parameter and check error message there.
Pavel Feldman
Comment 3
2011-06-29 06:43:59 PDT
Created
attachment 99081
[details]
Patch
Pavel Feldman
Comment 4
2011-06-29 06:47:16 PDT
Committed
r90013
: <
http://trac.webkit.org/changeset/90013
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug