2011-06-29  Pavel Feldman  <pfeldman@google.com>

Reviewed by Yury Semikhatsky.

        Web Inspector: tab crash after deleting trailing quote when editing attribute
        https://bugs.webkit.org/show_bug.cgi?id=63544

        * inspector/elements/set-attribute-expected.txt:
        * inspector/elements/set-attribute.html:
2011-06-29  Pavel Feldman  <pfeldman@google.com>

        Reviewed by Yury Semikhatsky.

        Web Inspector: tab crash after deleting trailing quote when editing attribute
        https://bugs.webkit.org/show_bug.cgi?id=63544

        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::setAttributesText):
        * inspector/front-end/ElementsTreeOutline.js:
        (WebInspector.ElementsTreeElement.prototype._attributeEditingCommitted.moveToNextAttributeIfNeeded):
        (WebInspector.ElementsTreeElement.prototype._attributeEditingCommitted):

Canonical link: https://commits.webkit.org/79297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90013 268f45cc-cd09-0410-ab3c-d52691b4dbfc